--- a/login.html
+++ b/login.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>my new app!</title>
+    <title></title>
   </head>
   <body>
-    <p>login here</p>
 
   </body>
 </html>
